[ES-1421] MAL compiler support for well-defined TTC functions
Change-Id: I0f2f3854518d96dc6d9257ed5ae7d2a2f61313ab